--- a/landing.html
+++ b/landing.html
@@ -15,13 +15,14 @@
 
         </div>
         <ul class="contact-list">
-            <li class="contact-item"><img src="https://via.placeholder.com/35" alt="Athena"><span>Athena Zhong</span></li>
-            <li class="contact-item"><img src="https://via.placeholder.com/35" alt="Chen"><span>Chen Peng</span></li>
-            <li class="contact-item"><img src="https://via.placeholder.com/35" alt="Lucy"><span>Lucy Lu</span></li>
-            <li class="contact-item selected"><img src="https://via.placeholder.com/35" alt="Niki"><span>Niki Hu</span></li>
-            <li class="contact-item"><img src="https://via.placeholder.com/35" alt="Lila"><span>Lila Montgomery</span></li>
+            <li class="home-item"><span>🪴 HOME</span></li>
+            <li class="contact-item"><img src="images/Athena.jpg" alt="Athena"><span>Athena Zhong</span></li>
+            <li class="contact-item"><img src="images/Chen.jpg" alt="Chen"><span>Chen Peng</span></li>
+            <li class="contact-item"><img src="images/Lucy.jpg" alt="Lucy"><span>Lucy Lu</span></li>
+            <li class="contact-item selected"><img src="images/Niki.JPG" alt="Niki"><span>Niki Hu</span></li>
+            <li class="contact-item"><img src="images/2.png" alt="Lila"><span>Lila Montgomery</span></li>
             <li class="contact-item"><img src="https://via.placeholder.com/35" alt="Evan"><span>Evan Carter</span></li>
-            <li class="contact-item"><img src="https://via.placeholder.com/35" alt="Sophia"><span>Sophia Bennett</span></li>
+            <li class="contact-item"><img src="images/1.png" alt="Sophia"><span>Sophia Bennett</span></li>
             <li class="contact-item"><img src="https://via.placeholder.com/35" alt="Liam"><span>Liam Harrison</span></li>
             <li class="contact-item"><img src="https://via.placeholder.com/35" alt="Olivia"><span>Olivia Reed</span></li>
             <li class="contact-item"><img src="https://via.placeholder.com/35" alt="Noah"><span>Noah Anderson</span></li>
@@ -177,25 +178,25 @@
 
 
 
-        <div class="chatBot">
-            <header>
-                <h2>ChatBot</h2>
-                <span alt="Close" 
-                      id="cross" 
-                      onclick="cancel()">X</span>
-            </header>
-            <ul class="chatbox">
-                <li class="chat-incoming chat">
-                    <p>Hey! How can I assist you today?</p>
-                </li>
-            </ul>
-            <div class="chat-input">
-                <textarea rows="0" cols="17"
-                          placeholder="Enter a message..."></textarea>
-                <button id="sendBTN">Send</button>
-            </div>
+    <div class="chatBot">
+        <header>
+            <h2>ChatBot</h2>
+            <span alt="Close" 
+                    id="cross" 
+                    onclick="cancel()">X</span>
+        </header>
+        <ul class="chatbox">
+            <li class="chat-incoming chat">
+                <p>Hey! How can I assist you today?</p>
+            </li>
+        </ul>
+        <div class="chat-input">
+            <textarea rows="0" cols="17"
+                        placeholder="Enter a message..."></textarea>
+            <button id="sendBTN">Send</button>
         </div>
-        <script src="script.js" defer></script>
+    </div>
+    <script src="script.js" defer></script>
 
 </body>
 </html>
